--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="banner">
         </div>
-        <section style="margin-left: auto; margin-right: auto; margin-top: 0px;">
+        <section style="margin-left: 200px; margin-right: auto; margin-top: 0px;">
         <a href="page_ml.html">
             <section class="block">
                 <div>
